# tesseract

./: Dockerfile  app.py  docker-compose.yml  gunicorn_config.py  pic.py  pyproject.toml  requirements.txt
